Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType22.out
TargetType22.java:29:21: compiler.warn.unchecked.varargs.non.reifiable.type: A
TargetType22.java:40:9: compiler.err.ref.ambiguous: call, kindname.method, call(TargetType22.Sam1<java.lang.String>), TargetType22, kindname.method, call(TargetType22.SamX<java.lang.String>), TargetType22
1 error
1 warning
